--- a/about.html
+++ b/about.html
@@ -221,22 +221,28 @@
                 </div>
             </div>
         </div>
-        <!-- Popular Items End -->
-        <!--? Services Area Start -->
-        <div class="categories-area section-padding40 gray-bg">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="single-cat mb-50">
-                            <div class="cat-icon">
-                                <img src="assets/img/icon/services1.svg" alt="">
-                            </div>
-                            <div class="cat-cap">
-                                <h5>Fast & Free Delivery</h5>
-                                <p>Free delivery on all orders</p>
-                            </div>
-         
-        <!--? Services Area End -->
+<!-- Popular Items End -->
+<!--? Services Area Start -->
+<div class="categories-area section-padding40 gray-bg">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="single-cat mb-50">
+                    <div class="cat-icon">
+                        <img src="assets/img/icon/services1.svg" alt="">
+                    </div>
+                    <div class="cat-cap">
+                        <h5>Fast & Free Delivery</h5>
+                        <p>Free delivery on all orders</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Other service blocks can be added here if needed -->
+        </div>
+    </div>
+</div>
+<!--? Services Area End -->
+
     </main>
 
     <footer>
