--- a/about.html
+++ b/about.html
@@ -259,7 +259,7 @@
                        </div>
                        <div class="footer-tittle">
                            <div class="footer-pera">
-                               <p>Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
+                               <p>Timeless pieces with a focus on comfort. All our shoes are made ethically, using noble leathers and padded insoles.</p>
                            </div>
                        </div>
                        <!-- social -->
@@ -312,9 +312,9 @@
                 <div class="footer-tittle">
                     <h4>Get in touch</h4>
                     <ul>
-                        <li><a href="#">(89) 982-278 356</a></li>
-                        <li><a href="#">demo@colorlib.com</a></li>
-                        <li><a href="#">67/A, Colorlib, Green road, NYC</a></li>
+                        <li><a href="#">(202) 982-2785</a></li>
+                        <li><a href="#">gurisashoes@gmail.com</a></li>
+                        <li><a href="#">1500 Harry Thomas Way, Washington DC, USA</a></li>
                     </ul>
                 </div>
             </div>
