--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
                     <div class="col-lg-10">
                         <div class="section-tittle mb-60 text-center pt-10">
                             <h2>Our Story</h2>
-                            <p class="pera">Hola, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <p class="pera">Gurisa brings you exquisite leather footwear, handcrafted by generations of Argentine artisans.  Sourced from premium Argentinian leather, renowned for its quality that rivals the finest Italian offerings, our shoes are produced in limited-edition batches, ensuring exclusivity and meticulous attention to detail.  Experience the rich heritage and exceptional craftsmanship of Gurisa, now available in the US.</p>
                         </div>
                     </div>
                     <div class="col-lg-12">
@@ -142,7 +142,7 @@
                     <div class="col-lg-10">
                         <div class="section-tittle mb-60 text-center pt-10">
                             <h2>Journey start from</h2>
-                            <p class="pera">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <p class="pera">Gurisa brings you exquisite leather footwear, handcrafted by generations of Argentine artisans.  Sourced from premium Argentinian leather, renowned for its quality that rivals the finest Italian offerings, our shoes are produced in limited-edition batches, ensuring exclusivity and meticulous attention to detail.  Experience the rich heritage and exceptional craftsmanship of Gurisa, now available in the US.</p>
                         </div>
                     </div>
                     <div class="col-lg-12">
@@ -155,7 +155,7 @@
                     <div class="col-lg-10">
                         <div class="section-tittle mb-60 text-center pt-10">
                             <h2>2020</h2>
-                            <p class="pera">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <p class="pera">Gurisa brings you exquisite leather footwear, handcrafted by generations of Argentine artisans.  Sourced from premium Argentinian leather, renowned for its quality that rivals the finest Italian offerings, our shoes are produced in limited-edition batches, ensuring exclusivity and meticulous attention to detail.  Experience the rich heritage and exceptional craftsmanship of Gurisa, now available in the US.</p>
                         </div>
                     </div>
                 </div>
