--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
                     <div class="col-lg-10">
                         <div class="section-tittle mb-60 text-center pt-10">
                             <h2>Journey start from</h2>
-                            <p class="pera">Gurisa brings you exquisite leather footwear, handcrafted by generations of Argentine artisans.  Sourced from premium Argentinian leather, renowned for its quality that rivals the finest Italian offerings, our shoes are produced in limited-edition batches, ensuring exclusivity and meticulous attention to detail.  Experience the rich heritage and exceptional craftsmanship of Gurisa, now available in the US.</p>
+                            <p class="pera">The idea of Gurisa was sparked by a desire to bring Argentinean craftsmanship to the global stage, specifically to fashion-conscious women in the U.S. who value unique, high-quality leather shoes. Recognizing the superior quality of Argentine leather, which rivals even the finest Italian leather, we envisioned a brand that stands at the intersection of artisanal tradition and contemporary fashion. Our journey began with an in-depth understanding of the intricate shoe-making process, closely working with artisan families whose knowledge and skills are woven into every shoe we create.</p>
                         </div>
                     </div>
                     <div class="col-lg-12">
@@ -154,8 +154,10 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-10">
                         <div class="section-tittle mb-60 text-center pt-10">
-                            <h2>2020</h2>
-                            <p class="pera">Gurisa brings you exquisite leather footwear, handcrafted by generations of Argentine artisans.  Sourced from premium Argentinian leather, renowned for its quality that rivals the finest Italian offerings, our shoes are produced in limited-edition batches, ensuring exclusivity and meticulous attention to detail.  Experience the rich heritage and exceptional craftsmanship of Gurisa, now available in the US.</p>
+                            <h2>Our Beginnings</h2>
+                            <p class="pera">In 2020, our plans to establish Gurisa were set in motion, but the unexpected onset of the COVID-19 pandemic brought significant challenges. Our search for the right manufacturing partners in Argentina was halted as the world grappled with unprecedented disruptions. However, this pause was not a full stop but a moment of reflection and strategic planning. It allowed us to refine our vision and strengthen our resolve to create a brand that not only stands for quality but also resilience and adaptability in the face of global challenges.
+
+Each section of our story is a piece of Gurisa’s identity, reflecting our dedication to quality, heritage, and innovative resilience. Explore our offerings and join us in celebrating the art of shoe-making at its finest.</p>
                         </div>
                     </div>
                 </div>
