--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                 <div class="col-xl-8 col-lg-9">
                                     <!-- Hero Caption -->
                                     <div class="hero__caption">
-                                        <h1>fashion<br>changing<br>always</h1>
+                                        <h1>Leather<br>Shoes<br>Always</h1>
                                         <a href="shop.html" class="btn">Shop Now</a>
                                     </div>
                                 </div>
@@ -205,7 +205,7 @@
                         <div class="popular-img">
                             <img src="assets/img/gallery/popular2.png" alt="">
                             <div class="img-cap">
-                                <span>Watches</span>
+                                <span>Shoes</span>
                             </div>
                             <div class="favorit-items">
                              <a href="shop.html" class="btn">Shop Now</a>
@@ -218,7 +218,7 @@
                     <div class="popular-img">
                         <img src="assets/img/gallery/popular3.png" alt="">
                         <div class="img-cap">
-                            <span>Jackets</span>
+                            <span>Boots</span>
                         </div>
                         <div class="favorit-items">
                          <a href="shop.html" class="btn">Shop Now</a>
@@ -265,7 +265,7 @@
                         </div>
                     </div>
                     <div class="popular-caption">
-                        <h3><a href="product_details.html">Knitted Jumper</a></h3>
+                        <h3><a href="product_details.html">Linda</a></h3>
                         <div class="rating mb-10">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -273,7 +273,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <span>$ 30.00</span>
+                        <span>$ 70.00</span>
                     </div>
                 </div>
             </div>
@@ -287,7 +287,7 @@
                         </div>
                     </div>
                     <div class="popular-caption">
-                     <h3><a href="product_details.html">Knitted Jumper</a></h3>
+                     <h3><a href="product_details.html">Jamie</a></h3>
                      <div class="rating mb-10">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -295,7 +295,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <span>$ 30.00</span>
+                    <span>$ 89.00</span>
                 </div>
             </div>
         </div>
@@ -309,7 +309,7 @@
                     </div>
                 </div>
                 <div class="popular-caption">
-                 <h3><a href="product_details.html">Knitted Jumper</a></h3>
+                 <h3><a href="product_details.html">North</a></h3>
                  <div class="rating mb-10">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -317,7 +317,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                 </div>
-                <span>$ 30.00</span>
+                <span>$ 78.00</span>
             </div>
         </div>
     </div>
@@ -331,7 +331,7 @@
                 </div>
             </div>
             <div class="popular-caption">
-             <h3><a href="product_details.html">Knitted Jumper</a></h3>
+             <h3><a href="product_details.html">Catalina</a></h3>
              <div class="rating mb-10">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -339,7 +339,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
             </div>
-            <span>$ 30.00</span>
+            <span>$ 67.00</span>
         </div>
     </div>
 </div>
@@ -353,7 +353,7 @@
             </div>
         </div>
         <div class="popular-caption">
-         <h3><a href="product_details.html">Knitted Jumper</a></h3>
+         <h3><a href="product_details.html">Florence</a></h3>
          <div class="rating mb-10">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -361,7 +361,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
         </div>
-        <span>$ 30.00</span>
+        <span>$ 94.00</span>
     </div>
 </div>
 </div>
@@ -375,7 +375,7 @@
             </div>
         </div>
         <div class="popular-caption">
-         <h3><a href="product_details.html">Knitted Jumper</a></h3>
+         <h3><a href="product_details.html">Adelina</a></h3>
          <div class="rating mb-10">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -383,7 +383,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
         </div>
-        <span>$ 30.00</span>
+        <span>$ 87.00</span>
     </div>
 </div>
 </div>
@@ -397,7 +397,7 @@
             </div>
         </div>
         <div class="popular-caption">
-         <h3><a href="product_details.html">Knitted Jumper</a></h3>
+         <h3><a href="product_details.html">Jolie</a></h3>
          <div class="rating mb-10">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -405,7 +405,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
         </div>
-        <span>$ 30.00</span>
+        <span>$ 79.00</span>
     </div>
 </div>
 </div>
@@ -419,7 +419,7 @@
             </div>
         </div>
         <div class="popular-caption">
-         <h3><a href="product_details.html">Knitted Jumper</a></h3>
+         <h3><a href="product_details.html">Lucy</a></h3>
          <div class="rating mb-10">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
