--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Fashion | Teamplate</title>
+    <title>Gurisa | Shoes</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -171,9 +171,9 @@ Each section of our story is a piece of Gurisa’s identity, reflecting our dedi
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="single-popular-items mb-50 text-center">
                             <div class="popular-img">
-                                <img src="assets/img/gallery/popular1.png" alt="">
+                                <img src="assets/img/gallery/popular11.png" alt="">
                                 <div class="img-cap">
-                                    <span>Glasses</span>
+                                    <span>Boots</span>
                                 </div>
                                 <div class="favorit-items">
                                     <a href="#" class="btn">Shop Now</a>
@@ -184,7 +184,7 @@ Each section of our story is a piece of Gurisa’s identity, reflecting our dedi
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="single-popular-items mb-50 text-center">
                             <div class="popular-img">
-                                <img src="assets/img/gallery/popular2.png" alt="">
+                                <img src="assets/img/gallery/popular22.png" alt="">
                                 <div class="img-cap">
                                     <span>Watches</span>
                                 </div>
@@ -197,7 +197,7 @@ Each section of our story is a piece of Gurisa’s identity, reflecting our dedi
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="single-popular-items mb-50 text-center">
                             <div class="popular-img">
-                                <img src="assets/img/gallery/popular3.png" alt="">
+                                <img src="assets/img/gallery/popular33.png" alt="">
                                 <div class="img-cap">
                                     <span>Jackets</span>
                                 </div>
@@ -210,9 +210,9 @@ Each section of our story is a piece of Gurisa’s identity, reflecting our dedi
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="single-popular-items mb-50 text-center">
                             <div class="popular-img">
-                                <img src="assets/img/gallery/popular4.png" alt="">
+                                <img src="assets/img/gallery/popular44.png" alt="">
                                 <div class="img-cap">
-                                    <span>Clothes</span>
+                                    <span>Shoes</span>
                                 </div>
                                 <div class="favorit-items">
                                     <a href="#" class="btn">Shop Now</a>
