--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <div class="col-xl-8 col-lg-9">
                                     <!-- Hero Caption -->
                                     <div class="hero__caption">
-                                        <h1>fashion<br>changing<br>always</h1>
+                                        <h1>Artisan<br>Shoes<br>Always</h1>
                                         <a href="shop.html" class="btn">Shop Now</a>
                                     </div>
                                 </div>
@@ -427,7 +427,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
         </div>
-        <span>$ 30.00</span>
+        <span>$ 80.00</span>
     </div>
 </div>
 </div>
@@ -465,7 +465,7 @@
                         <img src="assets/img/gallery/popular-imtes1.png" alt="">
                     </div>
                     <div class="location-details">
-                        <p><a href="product_details.html">Established fact that by the<br> readable content</a></p>
+                        <p><a href="product_details.html">Sustainable<br>Production</a></p>
                         <a href="product_details.html" class="btn">Read More</a>
                     </div>
                 </div>
@@ -476,7 +476,7 @@
                         <img src="assets/img/gallery/popular-imtes2.png" alt="">
                     </div>
                     <div class="location-details">
-                        <p><a href="product_details.html">Established fact that by the<br> readable content</a></p>
+                        <p><a href="product_details.html">Made by families of<br> Artisans</a></p>
                         <a href="product_details.html" class="btn">Read More</a>
                     </div>
                 </div>
@@ -493,11 +493,7 @@
                 <div class="single-cat mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
                     <div class="cat-icon">
                         <img src="assets/img/icon/services1.svg" alt="">
-                    </div>
-                    <div class="cat-cap">
-                        <h5>Fast & Free Delivery</h5>
-                        <p>Free delivery on all orders</p>
-                    </div>
+ 
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6">
@@ -505,22 +501,14 @@
                     <div class="cat-icon">
                         <img src="assets/img/icon/services2.svg" alt="">
                     </div>
-                    <div class="cat-cap">
-                        <h5>Fast & Free Delivery</h5>
-                        <p>Free delivery on all orders</p>
-                    </div>
-                </div>
+
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="single-cat mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                     <div class="cat-icon">
                         <img src="assets/img/icon/services3.svg" alt="">
                     </div>
-                    <div class="cat-cap">
-                        <h5>Fast & Free Delivery</h5>
-                        <p>Free delivery on all orders</p>
-                    </div>
-                </div>
+ 
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="single-cat wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
