--- a/shop.html
+++ b/shop.html
@@ -128,7 +128,7 @@
                     <div class="col-xl-7 col-lg-8 col-md-10">
                         <div class="section-tittle mb-50">
                             <h2>Shop with us</h2>
-                            <p>Browse from 230 latest items</p>
+                            <p>Browse from our TOP latest items</p>
                         </div>
                     </div>
                 </div>
@@ -142,22 +142,20 @@
                                 <!-- Select City items start -->
                                 <div class="select-job-items2">
                                     <select name="select2">
-                                        <option value="">Category</option>
-                                        <option value="">Shat</option>
-                                        <option value="">T-shart</option>
-                                        <option value="">Pent</option>
-                                        <option value="">Dress</option>
+                                        <option value="">Size</option>
+                                        <option value="">Shoe Type</option>
+                                        <option value="">Color</option>
                                     </select>
                                 </div>
                                 <!--  Select City items End-->
                                 <!-- Select State items start -->
                                 <div class="select-job-items2">
                                     <select name="select3">
-                                        <option value="">Type</option>
-                                        <option value="">SM</option>
-                                        <option value="">LG</option>
-                                        <option value="">XL</option>
-                                        <option value="">XXL</option>
+                                        <option value="">US Size</option>
+                                        <option value="">6</option>
+                                        <option value="">7</option>
+                                        <option value="">8</option>
+                                        <option value="">9</option>
                                     </select>
                                 </div>
                                 <!--  Select State items End-->
@@ -176,11 +174,10 @@
                                 <div class="select-job-items2">
                                     <select name="select5">
                                         <option value="">Color</option>
-                                        <option value="">Whit</option>
+                                        <option value="">Black</option>
                                         <option value="">Green</option>
-                                        <option value="">Blue</option>
-                                        <option value="">Sky Blue</option>
-                                        <option value="">Gray</option>
+                                        <option value="">Multicolor</option>
+
                                     </select>
                                 </div>
                                 <!--  Select km items End-->
@@ -188,12 +185,10 @@
                                 <div class="select-job-items2">
                                     <select name="select6">
                                         <option value="">Price range</option>
-                                        <option value="">$10 to $20</option>
-                                        <option value="">$20 to $30</option>
-                                        <option value="">$50 to $80</option>
-                                        <option value="">$100 to $120</option>
-                                        <option value="">$200 to $300</option>
-                                        <option value="">$500 to $600</option>
+                                        <option value="">$60 to $71</option>
+                                        <option value="">$72 to $81</option>
+                                        <option value="">$82 to $90</option>
+
                                     </select>
                                 </div>
                                 <!--  Select km items End-->
