--- a/blog_details.html
+++ b/blog_details.html
@@ -544,7 +544,7 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
            </div>
            <div class="footer-tittle">
              <div class="footer-pera">
-               <p>Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
+               <p>Handmade by our Local Artisans.</p>
              </div>
            </div>
            <!-- social -->
@@ -597,9 +597,9 @@ class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end al
         <div class="footer-tittle">
           <h4>Get in touch</h4>
           <ul>
-            <li><a href="#">(89) 982-278 356</a></li>
-            <li><a href="#">demo@colorlib.com</a></li>
-            <li><a href="#">67/A, Colorlib, Green road, NYC</a></li>
+            <li><a href="#">(202) 982-2756</a></li>
+            <li><a href="#">GurisaShoes@gmail.com</a></li>
+            <li><a href="#">Washington DC, USA</a></li>
           </ul>
         </div>
       </div>
