--- a/blog.html
+++ b/blog.html
@@ -446,7 +446,7 @@
                        </div>
                        <div class="footer-tittle">
                            <div class="footer-pera">
-                               <p>Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
+                               <p>Gurisa - Made by Artisans.</p>
                            </div>
                        </div>
                        <!-- social -->
@@ -500,8 +500,8 @@
                     <h4>Get in touch</h4>
                     <ul>
                         <li><a href="#">(89) 982-278 356</a></li>
-                        <li><a href="#">demo@colorlib.com</a></li>
-                        <li><a href="#">67/A, Colorlib, Green road, NYC</a></li>
+                        <li><a href="#">GurisaShoes@gmail.com</a></li>
+                        <li><a href="#">Washington DC, USA</a></li>
                     </ul>
                 </div>
             </div>
