--- a/contact.html
+++ b/contact.html
@@ -202,21 +202,21 @@
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-home"></i></span>
                             <div class="media-body">
-                                <h3>Buttonwood, California.</h3>
-                                <p>Rosemead, CA 91770</p>
+                                <h3>Washington DC, USA.</h3>
+                                <p>DC 20002</p>
                             </div>
                         </div>
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
                             <div class="media-body">
-                                <h3>+1 253 565 2365</h3>
+                                <h3>+1 202 565 2365</h3>
                                 <p>Mon to Fri 9am to 6pm</p>
                             </div>
                         </div>
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-email"></i></span>
                             <div class="media-body">
-                                <h3>support@colorlib.com</h3>
+                                <h3>gurisashoes@gmail.com</h3>
                                 <p>Send us your query anytime!</p>
                             </div>
                         </div>
@@ -240,7 +240,7 @@
                        </div>
                        <div class="footer-tittle">
                            <div class="footer-pera">
-                               <p>Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
+                               <p>Gurisa Shoes was made for you!.</p>
                            </div>
                        </div>
                        <!-- social -->
@@ -293,9 +293,9 @@
                 <div class="footer-tittle">
                     <h4>Get in touch</h4>
                     <ul>
-                        <li><a href="#">(89) 982-278 356</a></li>
-                        <li><a href="#">demo@colorlib.com</a></li>
-                        <li><a href="#">67/A, Colorlib, Green road, NYC</a></li>
+                        <li><a href="#">(202) 278 3356</a></li>
+                        <li><a href="#">gurisashoes@gmail.com</a></li>
+                        <li><a href="#">1500 Harry Thomas Way, Washington DC</a></li>
                     </ul>
                 </div>
             </div>
