--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                    </div>
                    <div class="footer-tittle">
                        <div class="footer-pera">
-                           <p>Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
+                           <p>Gurisa - Made by Artisans.</p>
                        </div>
                    </div>
                    <!-- social -->
@@ -570,9 +570,9 @@
             <div class="footer-tittle">
                 <h4>Get in touch</h4>
                 <ul>
-                    <li><a href="#">(89) 982-278 356</a></li>
-                    <li><a href="#">demo@colorlib.com</a></li>
-                    <li><a href="#">67/A, Colorlib, Green road, NYC</a></li>
+                    <li><a href="#">(202) 982-2756</a></li>
+                    <li><a href="#">GurisaShoes@gmail.com</a></li>
+                    <li><a href="#">Washington DC, USA</a></li>
                 </ul>
             </div>
         </div>
