--- a/product_details.html
+++ b/product_details.html
@@ -132,7 +132,7 @@
                             <h2>Description</h2>
                         </div>
                         <div class="directory-cap mb-40">
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable.</p>
+                            <p>Gurisa's Signature Leather Shoes are expertly crafted from premium Argentine leather, offering both superior quality and lasting durability. Handmade by skilled artisans, these pumps feature a sleek design that seamlessly blends traditional craftsmanship with modern style. Designed for comfort, they include cushioned insoles and are available in three colors and multiple sizes, including half sizes. Each pair is sustainably produced in small batches and comes in eco-friendly packaging with a personalized note from the artisan.</p>
                         </div>
                         <div class="small-tittle mb-20">
                             <h2>Description</h2>
@@ -294,7 +294,7 @@
                        </div>
                        <div class="footer-tittle">
                            <div class="footer-pera">
-                               <p>Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
+                               <p>Gurisa - Made by Artisans.</p>
                            </div>
                        </div>
                        <!-- social -->
@@ -347,9 +347,9 @@
                 <div class="footer-tittle">
                     <h4>Get in touch</h4>
                     <ul>
-                        <li><a href="#">(89) 982-278 356</a></li>
-                        <li><a href="#">demo@colorlib.com</a></li>
-                        <li><a href="#">67/A, Colorlib, Green road, NYC</a></li>
+                        <li><a href="#">(202) 982-2756</a></li>
+                        <li><a href="#">GurisaShoes@gmail.com</a></li>
+                        <li><a href="#">Washington DC, USA</a></li>
                     </ul>
                 </div>
             </div>
