--- a/index.html
+++ b/index.html
@@ -138,19 +138,22 @@
 
                 <div class="slider-active dot-style">
                     <!-- Single -->
-                    <div class="single-slider slider-bg1 hero-overly slider-height d-flex align-items-center">
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-xl-8 col-lg-9">
-                                    <!-- Hero Caption -->
-                                    <div class="hero__caption">
-                                        <h1>fashion<br>changing<br>always</h1>
-                                        <a href="shop.html" class="btn">Shop Now</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+ <!-- Single Slider with Background Image 1 -->
+ <!-- Single Slider with Background Image 1 -->
+ <div class="single-slider slider-bg1 hero-overly slider-height d-flex align-items-center" 
+ style="background-image: url('assets/img/gallery/pic1.png');">
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-xl-8 col-lg-9">
+            <!-- Hero Caption -->
+            <div class="hero__caption">
+                <h1>fashion<br>changing<br>always</h1>
+                <a href="shop.html" class="btn">Shop Now</a>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
                     <!-- Single -->
                     <div class="single-slider slider-bg2 hero-overly slider-height d-flex align-items-center">
                         <div class="container">
