--- a/index.html
+++ b/index.html
@@ -155,36 +155,37 @@
 </div>
 </div>
                     <!-- Single -->
-                    <div class="single-slider slider-bg2 hero-overly slider-height d-flex align-items-center">
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-xl-8 col-lg-9">
-                                    <!-- Hero Caption -->
-                                    <div class="hero__caption">
-                                        <h1>fashion<br>changing<br>always</h1>
-                                        <a href="shop.html" class="btn">Shop Now</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Single -->
-                    <div class="single-slider slider-bg3 hero-overly slider-height d-flex align-items-center">
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-xl-8 col-lg-9">
-                                    <!-- Hero Caption -->
-                                    <div class="hero__caption">
-                                        <h1>Leather<br>Shoes<br>Always</h1>
-                                        <a href="shop.html" class="btn">Shop Now</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+    <!-- Single Slider with Background Image 2 -->
+    <div class="single-slider slider-bg2 hero-overly slider-height d-flex align-items-center" 
+         style="background-image: url('assets/img/gallery/pic2.png');">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-8 col-lg-9">
+                    <!-- Hero Caption -->
+                    <div class="hero__caption">
+                        <h1>leather<br>shoes<br>always</h1>
+                        <a href="shop.html" class="btn">Shop Now</a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+                    <!-- Single -->
+                    <div class="single-slider slider-bg3 hero-overly slider-height d-flex align-items-center" 
+                    style="background-image: url('assets/img/gallery/pic3.png');">
+                   <div class="container">
+                       <div class="row justify-content-center">
+                           <div class="col-xl-8 col-lg-9">
+                               <!-- Hero Caption -->
+                               <div class="hero__caption">
+                                   <h1>Sustainability<br>high-quality<br>Always</h1>
+                                   <a href="shop.html" class="btn">Shop Now</a>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+           </div>
         <!-- End Hero -->
         <!--? Popular Items Start -->
         <div class="popular-items pt-50">
